glance/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance-service
  namespace: glance-app
spec:
  selector:
    app: glance
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
