glance/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance-ingress
  namespace: glance-app
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: glance.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glance-service
                port:
                  number: 8080
  # tls:
  #   - hosts:
  #       - glance.local
  #     secretName: glance-tls
